--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,7 @@ services:
 rvm:
 - 2.4.2
 install:
-- git clone --depth 1 https://github.com/diaspora/diaspora.git
-- cp diaspora.yml diaspora/config/diaspora.yml
-- cp database.yml diaspora/config/database.yml
-- export TRAVIS_BUILD_DIR=$(pwd)/diaspora
-- cd $TRAVIS_BUILD_DIR
-- bundle install
-- bundle exec rake db:create db:migrate
+- bash diaspora.sh
 script:
-- bash script/server
+- echo "YEEE"
+- sleep 10 && killall ruby
